--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 </head>
 <body>
 
-    <h1>Welcome to My Interactive Map!</h1>
-    <p>This map is embedded from ArcGIS Online and hosted on GitHub Pages.</p>
+    <h1>Army Map Service Sheets from the Perry-Castañeda Library (PCL) Map Collection Finding</h1>
+    <p>This map contains bounding boxes from individual map sheets. Clicking on a box will display the map sheet title and link to the downloadable, georeferenced dataset on the Texas Geodata Portal.</p>
 
     <div class="map-container">
     
       <iframe 
         width="800" 
-        height="600" 
+        height="800" 
         frameborder="0" 
         scrolling="no" 
         marginheight="0" 
