--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <h1>Army Map Service Sheets from the Perry-Castañeda Library (PCL) Map Collection Finding</h1>
+    <h1>Army Map Service Sheets from the Perry-Castañeda Library Map Collection</h1>
     <p>This map contains bounding boxes from individual map sheets. Clicking on a box will display the map sheet title and link to the downloadable, georeferenced dataset on the Texas Geodata Portal.</p>
 
     <div class="map-container">
